--- a/config/locales/admin.en.yml
+++ b/config/locales/admin.en.yml
@@ -14,6 +14,7 @@ en:
       show: "Show"
     history:
       name: "History"
+      page_name: "History for %{name}"
     credentials:
       log_out: "Log out"
     list:
