Added future improvments list

--- a/README.rdoc
+++ b/README.rdoc
@@ -35,11 +35,12 @@ There are many ways to contribute:
 * by writing code (no patch is too small: fix typos in comments or inconsistent whitespace)
 * by refactoring code
 * by reviewing patches
-* financially[http://pledgie.com/campaigns/5428]
+
+Also there is a list of feature that are going to implemented even if the RubySOC will be finally over: a tighter integration with devise, some other visualization for History, integration with mountable apps and Rails 3.1
 
 All contributors will be added to the credits below and will receive the respect and gratitude of the author.
 == Contact
-If you are interested in contributing to RailsAdmin, please contact Erik Michaels-Ober via email[mailto:sferik@gmail.com] or Bogdan Gaza at [hurrycane@gmail.com], on GitHub at [http://github.com/sferik/] and [http://github.com/hurrycane/], or on Twitter at [http://twitter.com/sferik] and [http://twitter.com/hurrycane]
+If you are interested in contributing to RailsAdmin, please contact Erik Michaels-Ober via email[mailto:sferik@gmail.com] or Bogdan Gaza via email[hurrycane@gmail.com], on GitHub at [http://github.com/sferik/] and [http://github.com/hurrycane/], or on Twitter at [http://twitter.com/sferik] and [http://twitter.com/hurrycane]
 
 == Credits
 Many thanks to:
