Added unique ID column for general history view

--- a/config/locales/rails_admin.yml
+++ b/config/locales/rails_admin.yml
@@ -4,7 +4,7 @@
 en:
   admin:
     dashboard:
-      pagename: "Site administration"
+      pagename: "Site administrationz"
       name: "Dashboard"
       model_name: "Model name"
       last_used: "Last used"
