Delete remaining traces of Merb :'(

--- a/README.rdoc
+++ b/README.rdoc
@@ -14,7 +14,7 @@ It currently offers the following functionality:
 
 == Installation
 In your <tt>Gemfile</tt>, add the following dependency:
-  gem 'rails_admin', :git => "git://github.com/sferik/merb-admin.git"
+  gem 'rails_admin', :git => "git://github.com/sferik/rails_admin.git"
 Run:
   $ bundle update
 And then run:
