--- a/README.rdoc
+++ b/README.rdoc
@@ -53,4 +53,5 @@ Many thanks to:
 * {Daniel Neighman}[http://github.com/hassox] for {generalizing authentication}[http://github.com/sferik/rails_admin/commits/master?author=hassox]
 * {Jack Dempsey}[http://github.com/jackdempsey] for {adding support for HABTM associations}[http://github.com/sferik/rails_admin/commits/master?author=jackdempsey]
 * {Petteri Kääpä}[http://github.com/kaapa] for {writing the configuration DSL}[http://github.com/sferik/rails_admin/commit/b72a94c492c650ac615eda108dcdc6e9c58be992]
+* {Cameron Priest}[http://github.com/cameronpriest] for {removing an unused file}[http://github.com/sferik/rails_admin/commits/master?author=cameronpriest]
 * and everyone who contributed to MerbAdmin[http://github.com/sferik/merb-admin].
