Add Christian to Credits

--- a/README.mkd
+++ b/README.mkd
@@ -326,4 +326,6 @@ Many thanks to:
 * [Jack Dempsey](http://github.com/jackdempsey) for [adding support for HABTM associations](http://github.com/sferik/rails_admin/commits/master?author=jackdempsey)
 * [Petteri Kääpä](http://github.com/kaapa) for [writing the configuration DSL](http://github.com/sferik/rails_admin/commits/master?author=kaapa)
 * [Cameron Priest](http://github.com/cameronpriest) for [removing an unused file](http://github.com/sferik/rails_admin/commits/master?author=cameronpriest)
+* [Christian Hølmer](http://github.com/hoelmer) for [a few random commits](http://github.com/sferik/rails_admin/commits/master?author=hoelmer)
 * and everyone who contributed to [MerbAdmin](http://github.com/sferik/merb-admin).
+
