Swap rcov with simplecov for Ruby 1.9 compatibility

--- a/README.mkd
+++ b/README.mkd
@@ -308,7 +308,7 @@ Submitting a Pull Request
 4. Add documentation for your feature or bug fix.
 5. Run <tt>bundle exec rake doc:yard</tt>. If your changes are not 100% documented, go back to step 4.
 6. Add specs for your feature or bug fix.
-7. Run <tt>bundle exec rake spec:rcov</tt>. If your changes are not 100% covered, go back to step 6.
+7. Run <tt>bundle exec rake spec</tt>. If your changes are not 100% covered, go back to step 6.
 8. Commit and push your changes.
 9. Submit a pull request. Please do not include changes to the gemspec, version, or history file. (If you want to create your own version for some reason, please do so in a separate commit.)
 
