Add Finnish translation, add action name translations and fix 'save and add another' & 'save and edit' behaviour when using translated buttons

--- a/config/locales/rails_admin.en.yml
+++ b/config/locales/rails_admin.en.yml
@@ -46,3 +46,7 @@ en:
       successful: "%{name} was successfully %{action}"
       error: "%{name} failed to be %{action}"
       noaction: "No actions were taken"
+    actions:
+      created: "created"
+      updated: "updated"
+      deleted: "deleted"
