No need to uppercase 'Basic info' translation string (the default form section header) as it's uppercased by CSS anyway. Also other form section headers are printed capitalized, not uppercased.

--- a/config/locales/rails_admin.en.yml
+++ b/config/locales/rails_admin.en.yml
@@ -29,7 +29,7 @@ en:
       select: "Select %{name} to edit"
       show_all: "Show all"
     new:
-      basic_info: "BASIC INFO"
+      basic_info: "Basic info"
       required: "Required"
       optional: "Optional"
       one_char: "character."
